...
    <string name="logo_gravity_top_center">顶部居中 (TOP|CENTER)</string>
    <string name="logo_gravity_bottom_center">底部居中 (BOTTOM|CENTER)</string>
    <string name="logo_gravity_middle_start">居中靠左 (Middle|START)</string>
    <string name="logo_gravity_center">居中 (CENTER)</string>
    <string name="logo_gravity_middle_end">居中靠右 (Middle|END)</string>
    <string name="map_item_scale_bar">比例尺</string>
    <string name="map_item_zoom">缩放控件</string>
    <string name="map_item_map_event_listener">地图事件监听</string>
    <string name="map_item_map_style">地图样式</string>
    <string name="map_item_day_night_mode">日夜模式控件</string>
    <string name="map_item_poi_click_center">兴趣点点击查询</string>

    <!--    MapRenderScreen-->
...
    <string name="poi_clear_highlight">清除高亮</string>

    <!--    ZoomScreen-->
    <string name="zoom_show_buttons">显示缩放按钮</string>
    <string name="zoom_show_level">显示缩放级别</string>
    <string name="zoom_gravity_label">缩放按钮位置 (setZoomButtonsGravity)</string>
    <string name="zoom_gravity_top_end">右上 (TOP|END)</string>
    <string name="zoom_gravity_top_start">左上 (TOP|START)</string>
    <string name="zoom_gravity_bottom_end">右下 (BOTTOM|END)</string>
    <string name="zoom_gravity_bottom_start">左下 (BOTTOM|START)</string>
    <string name="zoom_gravity_top_center">顶部居中 (TOP|CENTER)</string>
    <string name="zoom_gravity_bottom_center">底部居中 (BOTTOM|CENTER)</string>
    <string name="zoom_gravity_middle_start">居中靠左 (Middle|START)</string>
    <string name="zoom_gravity_center">居中 (CENTER)</string>
    <string name="zoom_gravity_middle_end">居中靠右 (Middle|END)</string>
    <string name="zoom_button_size_label">按钮尺寸 (setZoomButtonsSize)</string>
    <string name="zoom_precision_label">缩放级别精度 (setZoomLevelFormat)</string>
    <string name="zoom_precision_decimal_unit">位小数</string>
    <string name="zoom_level_position_label">缩放级别位置 (setZoomLevelPosition)</string>
    <string name="zoom_level_position_top">上 (文本 / + / -)</string>
    <string name="zoom_level_position_middle">中 (+ / 文本 / -)</string>
    <string name="zoom_level_position_bottom">下 (+ / - / 文本)</string>

    <!--    CompassScreen-->
    <string name="compass_show_compass">显示指南针</string>
    <string name="compass_fade_when_facing_north">正北自动隐藏</string>
...
